--- a/public/style.css
+++ b/public/style.css
@@ -3083,6 +3083,7 @@ img {
     margin-bottom: 1rem !important;
     background: linear-gradient(135deg, #fff 0%, #aaa 100%);
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
